# binvim

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LSP_ADOPTION.md  README.md  ROADMAP.md  UP_NEXT.md  WINDOWS.md  flake.nix  install.ps1  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
playground/bash/: script.sh
playground/c/: main.c  util.h
playground/cpp/: main.cpp
playground/csharp/: Playground.csproj  Program.cs
playground/css/: styles.css  theme.scss
playground/dockerfile/: Dockerfile
playground/editorconfig/: .editorconfig
playground/elixir/: greeter.ex
playground/gitignore/: .gitattributes  .gitignore
playground/go/: go.mod  main.go
playground/html/: index.html
playground/java/: Main.java
playground/javascript/: component.jsx  index.js
playground/json/: config.jsonc  package.json
playground/kotlin/: Main.kt
playground/lua/: init.lua
playground/markdown/: README.md
playground/nix/: flake.nix
playground/php/: index.php
playground/python/: main.py
playground/razor/: Counter.razor  Index.cshtml
playground/ruby/: Gemfile  app.rb
playground/rust/: Cargo.toml  main.rs
playground/sql/: schema.sql
playground/svelte/: App.svelte
playground/toml/: Cargo.toml
playground/tsx/: App.tsx
playground/typescript/: index.ts  tsconfig.json
playground/typescript/vitest/: package-lock.json  package.json  tsconfig.json  utils.test.ts  utils.ts  vitest.config.ts
playground/xml/: project.csproj  sample.xml
playground/yaml/: config.yaml  workflow.yml
playground/zig/: main.zig
proptest-regressions/: motion.txt
scoop/: binvim.json
scripts/: do-release.sh  pkg-homebrew.sh  pkg-web.sh  release.sh
scripts/homebrew/: binvim.rb
src/: android.rs  ansi.rs  app.rs  buffer.rs  code_lens_synth.rs  command.rs  config.rs  crash.rs  cursor.rs  dap.rs  editorconfig.rs  format.rs  git.rs  install.rs  lang.rs  layout.rs  lib.rs  lsp.rs  main.rs  markdown_render.rs  mode.rs  motion.rs  package.rs  parser.rs  paths.rs  picker.rs  render.rs  session.rs  spell.rs  task.rs  terminal.rs  test.rs  text_object.rs  undo.rs  window.rs
src/app/: android_glue.rs  buffers.rs  cmdline_complete.rs  cmdline_history.rs  comment.rs  copilot.rs  dap_glue.rs  dispatch.rs  edit.rs  file_tree.rs  git_glue.rs  health.rs  input.rs  installer.rs  lazygit_glue.rs  lsp_glue.rs  multi_cursor.rs  package_glue.rs  pair.rs  picker_glue.rs  quickfix.rs  registers.rs  rename_preview.rs  save.rs  search.rs  side_terminal_glue.rs  spell_glue.rs  state.rs  task_glue.rs  terminal_glue.rs  test_glue.rs  view.rs  visual.rs  windows.rs
src/dap/: client.rs  io.rs  manager.rs  specs.rs  types.rs
src/lsp/: client.rs  io.rs  manager.rs  parse.rs  specs.rs  types.rs
src/task/: cargo_aliases.rs  dotnet.rs  justfile.rs  makefile.rs  npm_scripts.rs  specs.rs  types.rs
src/test/: cargo.rs  dotnet.rs  gotest.rs  manager.rs  pytest.rs  specs.rs  types.rs  vitest.rs
themes/ayu-light/: theme.toml
themes/catppuccin-latte/: theme.toml
themes/catppuccin-mocha/: theme.toml
themes/dracula/: theme.toml
themes/github-dark/: theme.toml
themes/github-light/: theme.toml
themes/gruvbox/: theme.toml
themes/light-owl/: theme.toml
themes/monokai/: theme.toml
themes/night-owl/: theme.toml
themes/nord/: theme.toml
themes/one-dark/: theme.toml
themes/solarized-light/: theme.toml
themes/tokyo-night/: theme.toml
themes/visual-studio/: theme.toml
