[package]
name = "binvim"
version = "0.1.0"
edition = "2024"
description = "Vim-grammar TUI editor with batteries included"
authors = ["B. Gunnarsson (@bgunnarssonis)"]
license-file = "LICENSE"
publish = false

[dependencies]
ropey = "1.6"
crossterm = "0.28"
anyhow = "1"
unicode-segmentation = "1.12"
unicode-width = "0.2"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-md = "0.3"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.23"
streaming-iterator = "0.1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = { version = "3", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
