[package]
name = "binvim"
version = "0.4.5"
edition = "2024"
rust-version = "1.85"
description = "Vim-grammar TUI editor with batteries included — tree-sitter, multi-server LSP, DAP, multi-cursor, sessions, single binary, no plugin system."
authors = ["B. Gunnarsson (@bgunnarssonis)"]
license-file = "LICENSE"
repository = "https://github.com/bgunnarsson/binvim"
homepage = "https://binvim.dev"
readme = "README.md"
keywords = ["editor", "vim", "tui", "lsp", "tree-sitter"]
categories = ["command-line-utilities", "text-editors"]
# Keep /playground, /themes, /scripts, /.github, proptest-regressions,
# and the like out of the crates.io tarball — they're development
# assets that live on github.com, not things the editor needs at
# runtime. The leading `/` anchors each entry to the package root;
# without it, `README.md` would match `playground/*/README.md` too
# and Cargo would pull every node_modules license file along with it.
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/rustfmt.toml",
]

[dependencies]
ropey = "1.6"
crossterm = "0.28"
anyhow = "1"
unicode-segmentation = "1.12"
unicode-width = "0.2"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-md = "0.3"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-razor = "0.1"
tree-sitter-yaml = "0.7"
tree-sitter-xml = "0.7"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-lua = "0.4"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-svelte-ng = "1"
tree-sitter-zig = "1"
tree-sitter-nix = "0.3"
tree-sitter-elixir = "0.3"
tree-sitter-kotlin-ng = "1"
tree-sitter-containerfile = "0.8"
tree-sitter-sequel = "0.3"
regex = "1"
streaming-iterator = "0.1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = { version = "3", default-features = false }
# `portable-pty` provides forkpty + ConPTY behind a unified API so
# the same `:terminal` code works on macOS / Linux / (eventually)
# Windows. `vte` is the WezTerm-derived VT100/xterm escape parser —
# we feed it PTY bytes and it calls our callbacks to mutate the
# terminal grid. No allocation per byte, no dependence on a renderer.
portable-pty = "0.9"
vte = "0.15"

[dev-dependencies]
# proptest drives the property-based test suite for motion / text_object
# invariants and the panic-hardening passes over compute_byte_colors and the
# LSP JSON shape extractors. Stays on stable, runs in `cargo test`.
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
