[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = ["Alice <alice@example.com>"]
description = "A sample TOML configuration file."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
ropey = "1.6"

[dev-dependencies]
proptest = "1.4"

[features]
default = ["json"]
json = []
yaml = ["dep:serde_yaml"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[[bin]]
name = "demo"
path = "src/main.rs"

[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
